Linked sonarqube coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 sonar.projectKey=aiqua
-sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.coverage.reportPaths=src/aiqua/tests/coverage.xml
