--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,24 @@ jobs:
     #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistic
 
-    - name: Test with unittest
+    - name: Run tests with coverage
       run: |
-        export PYTHONPATH=./src/aiqua:$PYTHONPATH
-        python -m unittest discover -s src/aiqua/tests
-    - name: Analyze with SonarQube 
+        coverage run -m unittest discover -s src/aiqua/tests
+
+    - name: Generate coverage report
+      run: |
+        coverage xml -o src/aiqua/tests/coverage.xml # Output the report to the expected directory
+        
+    - name: Analyze with SonarQube
       uses: sonarsource/sonarqube-scan-action@master
+      with:
+        args: >
+          -Dsonar.projectKey=<aiqua>
+          -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          -Dsonar.python.coverage.reportPaths=src/aiqua/tests/coverage.xml
+          # Add other necessary sonar properties here
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
