--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=aiqua
 sonar.python.coverage.reportPaths=src/aiqua/tests/coverage.xml
 sonar.exclusions=src/aiqua/appdbrealtime.py
+sonar.exclusions=src/aiqua/templates/*
