--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,3 @@
 sonar.projectKey=aiqua
 sonar.python.coverage.reportPaths=src/aiqua/tests/coverage.xml
-sonar.exclusions=src/aiqua/appdbrealtime.py
-sonar.exclusions=src/aiqua/templates/*
+sonar.exclusions=src/aiqua/appdbrealtime.py, src/aiqua/templates/*
